# vulkan-simple-2d-engine

./: CMakeLists.txt  README.md  main.cpp
backend/: CMakeLists.txt
backend/vulkan/buffers/include/: buffer.h  index-buffer.h  storage-buffer.h  uniform-buffer.h  vertex-buffer.h  view-projection-buffer.h
backend/vulkan/buffers/src/: index-buffer.cpp  storage-buffer.cpp  uniform-buffer.cpp  vertex-buffer.cpp  view-projection-buffer.cpp
backend/vulkan/command-buffer/include/: command-buffer-recorder.h  command-buffers.h
backend/vulkan/command-buffer/src/: command-buffers.cpp
backend/vulkan/include/: image-memory-barrier.h  instance.h  queue-family-indices.h  vulkan-application.h  window.h
backend/vulkan/src/: allocator.cpp  image-memory-barrier.cpp  vulkan-application.cpp
engine/: CMakeLists.txt
engine/circle-renderer/include/: circle-command-buffer-recorder-info.h  circle-command-buffer-recorder.h  circle-drawer.h
engine/circle-renderer/src/: circle-command-buffer-recorder.cpp  circle-drawer.cpp
engine/descriptors/include/: descriptor-set-layout.h
engine/descriptors/src/: descriptor-set-layout.cpp
engine/gui/include/: im-gui-command-buffer-recorder.h  im-gui.h
engine/gui/src/: im-gui-command-buffer-recorder.cpp  im-gui.cpp
engine/pipeline/include/: graphics-pipeline.h  pipeline.h
engine/pipeline/src/: graphics-pipeline.cpp  shader-module.cpp
engine/renderer/buffers/include/: buffer.h  uniform-buffer.h
engine/renderer/buffers/src/: uniform-buffer.cpp
engine/scene/include/: circle-command-buffer-recorder-info.h  circle-command-buffer-recorder.h  circle-drawer.h  gui.h  scene-command-buffer-recorder-info.h  scene-command-buffer-recorder.h  scene-drawer.h  scene.h
engine/scene/objects/: object-data.h
engine/scene/objects/include/: camera.h  renderable.h  shape-type.h
engine/scene/objects/shapes/include/: circle.h  square.h  triangle.h
engine/scene/objects/shapes/src/: circle.cpp  square.cpp  triangle.cpp
engine/scene/objects/src/: camera.cpp  renderable.cpp
engine/scene/src/: circle-command-buffer-recorder.cpp  circle-drawer.cpp  gui.cpp  scene-command-buffer-recorder.cpp  scene-drawer.cpp  scene.cpp
engine/shaders/: vert.vert
engine/square-renderer/include/: square-command-buffer-recorder-info.h  square-drawer.h
engine/square-renderer/src/: square-command-buffer-recorder.cpp  square-drawer.cpp
engine/struct/: object-data.h  storage-buffer.h  uniform-buffer.h  uniform-object.h  vertex.h  view-projection-buffer.h
engine/swapchain/include/: i-swap-chain.h
