add_library(engine
        swapchain/src/present-swapchain.cpp
        swapchain/include/present-swapchain.h
        swapchain/include/i-swap-chain.h
        pipeline/include/pipeline.h
        pipeline/src/pipeline-layout.cpp
        pipeline/include/pipeline-layout.h
        pipeline/src/graphics-pipeline.cpp
        pipeline/include/graphics-pipeline.h
        pipeline/src/shader-module.cpp
        pipeline/include/shader-module.h
        struct/vertex.h
        descriptors/src/descriptor-set-layout.cpp
        descriptors/include/descriptor-set-layout.h
        renderer/include/renderer.h
        renderer/command-buffer/src/command-buffers.cpp
        renderer/command-buffer/include/command-buffers.h
        renderer/command-buffer/src/command-pool.cpp
        renderer/command-buffer/include/command-pool.h
        renderer/src/image-memory-barrier.cpp
        renderer/include/image-memory-barrier.h
        renderer/buffers/src/vertex-buffer.cpp
        renderer/buffers/include/vertex-buffer.h
        renderer/buffers/src/index-buffer.cpp
        renderer/buffers/include/index-buffer.h
        renderer/buffers/include/buffer.h
        circle-renderer/include/circle-command-buffer-recorder-info.h
        circle-renderer/include/circle-command-buffer-recorder.h
        circle-renderer/include/circle-drawer.h
        circle-renderer/include/synchronization.h
        circle-renderer/src/circle-command-buffer-recorder.cpp
        circle-renderer/src/circle-drawer.cpp
        circle-renderer/src/synchronization.cpp
        struct/uniform-object.h
        renderer/buffers/src/uniform-buffer.cpp
        renderer/buffers/include/uniform-buffer.h
)

target_include_directories(engine PUBLIC include)
target_link_libraries(engine backend Vulkan::Vulkan file-manager glm::glm)