add_library(engine
        swapchain/src/present-swapchain.cpp
        swapchain/include/present-swapchain.h
        swapchain/include/i-swap-chain.h
        pipeline/include/pipeline.h
        pipeline/src/pipeline-layout.cpp
        pipeline/include/pipeline-layout.h
        pipeline/src/graphics-pipeline.cpp
        pipeline/include/graphics-pipeline.h
        pipeline/src/shader-module.cpp
        pipeline/include/shader-module.h
        struct/vertex.h
        descriptors/src/descriptor-set-layout.cpp
        descriptors/include/descriptor-set-layout.h
        renderer/include/renderer.h
        ../backend/vulkan/command-buffer/src/command-buffers.cpp
        ../backend/vulkan/command-buffer/include/command-buffers.h
        ../backend/vulkan/command-buffer/src/command-pool.cpp
        ../backend/vulkan/command-buffer/include/command-pool.h
        ../backend/vulkan/src/image-memory-barrier.cpp
        ../backend/vulkan/include/image-memory-barrier.h
        ../backend/vulkan/buffers/src/vertex-buffer.cpp
        ../backend/vulkan/buffers/include/vertex-buffer.h
        ../backend/vulkan/buffers/src/index-buffer.cpp
        ../backend/vulkan/buffers/include/index-buffer.h
        ../backend/vulkan/buffers/include/buffer.h
        scene/include/circle-command-buffer-recorder-info.h
        scene/include/circle-command-buffer-recorder.h
        scene/include/circle-drawer.h
        scene/include/synchronization.h
        scene/src/circle-command-buffer-recorder.cpp
        scene/src/circle-drawer.cpp
        scene/src/synchronization.cpp
        struct/uniform-object.h
        ../backend/vulkan/buffers/src/uniform-buffer.cpp
        ../backend/vulkan/buffers/include/uniform-buffer.h
        gui/src/im-gui.cpp
        gui/include/im-gui.h
)

target_include_directories(engine PUBLIC include)
target_link_libraries(engine backend Vulkan::Vulkan file-manager glm::glm)