add_library(engine
        swapchain/src/present-swapchain.cpp
        swapchain/include/present-swapchain.h
        swapchain/include/i-swap-chain.h
        pipeline/include/pipeline.h
        pipeline/src/pipeline-layout.cpp
        pipeline/include/pipeline-layout.h
        pipeline/src/graphics-pipeline.cpp
        pipeline/include/graphics-pipeline.h
        pipeline/src/shader-module.cpp
        pipeline/include/shader-module.h
        struct/vertex.h
        descriptors/src/descriptor-set-layout.cpp
        descriptors/include/descriptor-set-layout.h
        renderer/include/renderer.h
        ../backend/vulkan/command-buffer/src/command-buffers.cpp
        ../backend/vulkan/command-buffer/include/command-buffers.h
        ../backend/vulkan/command-buffer/src/command-pool.cpp
        ../backend/vulkan/command-buffer/include/command-pool.h
        ../backend/vulkan/src/image-memory-barrier.cpp
        ../backend/vulkan/include/image-memory-barrier.h
        ../backend/vulkan/buffers/src/vertex-buffer.cpp
        ../backend/vulkan/buffers/include/vertex-buffer.h
        ../backend/vulkan/buffers/src/index-buffer.cpp
        ../backend/vulkan/buffers/include/index-buffer.h
        ../backend/vulkan/buffers/include/buffer.h
        scene/include/scene-command-buffer-recorder-info.h
        scene/include/scene-command-buffer-recorder.h
        scene/include/scene-drawer.h
        scene/include/synchronization.h
        scene/src/scene-command-buffer-recorder.cpp
        scene/src/scene-drawer.cpp
        scene/src/synchronization.cpp
        struct/storage-buffer.h
        ../backend/vulkan/buffers/src/view-projection-buffer.cpp
        ../backend/vulkan/buffers/include/view-projection-buffer.h
        gui/src/im-gui.cpp
        gui/include/im-gui.h
        scene/src/gui.cpp
        scene/include/gui.h
        scene/objects/include/renderable.h
        scene/objects/include/shape-type.h
        scene/objects/shapes/src/circle.cpp
        scene/objects/shapes/include/circle.h
        scene/src/scene.cpp
        scene/include/scene.h
        struct/view-projection-buffer.h
        scene/objects/object-data.h
        scene/objects/shapes/src/triangle.cpp
        scene/objects/shapes/include/triangle.h
        scene/objects/shapes/src/square.cpp
        scene/objects/shapes/include/square.h
        scene/objects/src/camera.cpp
        scene/objects/include/camera.h
)

target_include_directories(engine PUBLIC include)
target_link_libraries(engine backend Vulkan::Vulkan file-manager glm::glm)
target_include_directories(engine PRIVATE ../3rd-party)